--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   db:
     image: postgres:15
     environment:
-      POSTGRES_DB: finance
+      POSTGRES_DB: clothes
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
     ports:
@@ -13,7 +13,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/finance
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/clothes
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 123
     depends_on:
